--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ header{
 	background-position: center center;
 	background-attachment: fixed;
 }
+header{
+	width: 100%;
+	height: 100vh;
+	background: url(images/Adams-Peak-2.jpg);
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+}
 nav{
 	width: 100%;
 	height: auto;
